--- a/static/styles.css
+++ b/static/styles.css
@@ -85,6 +85,7 @@
 .banner-blanco{
     background-color:white !important;
     color:black !important;
+    padding-top: 5vh !important;
 }
 .banner-inicio{
     --bs-gutter-x: 0rem !important; 
@@ -117,7 +118,9 @@
 }
 .imagen-servicio{
     margin-top: 5vh !important;
-    width:100% !important;
+    margin-left: 5vw !important;
+    margin-right: 5vw !important;
+    width:90% !important;
     height: 90% !important;
     object-fit: cover !important;
 }
@@ -143,6 +146,9 @@
 .li-footer{
     margin-right: 0% !important;
 }
+.carousel-item{
+    margin: 5vh !important;   
+}
 h2{
     margin:5vh !important;
 }
@@ -166,6 +172,7 @@ li,a{
     margin-right: 2% !important;
     color:#0b293d;
 }
+
 
 
 
