--- a/static/styles.css
+++ b/static/styles.css
@@ -221,3 +221,12 @@ li,a{
         width: 85%;
       }
   }
+
+  @media only screen and (min-width: 901px) {
+    .logo {
+        width: 115% !important;
+      }
+      .nav-ul {
+        font-size: 1.3rem !important;
+    }
+  }
