Agregué el icono de idioma

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,106 +1,130 @@
-.logo{
+.logo {
     width: 95%;
-    height:fit-content;
+    height: fit-content;
 }
+
 .nav-tuneado {
     margin-right: 5% !important;
     margin-left: 5% !important;
 }
-.banner{
+
+.banner {
     width: 100%;
     height: 90vh;
     object-fit: cover;
 }
-.texto-derecha{
-    color:white;
-    width: 50vw ;
+
+.texto-derecha {
+    color: white;
+    width: 50vw;
     position: absolute;
-    top:35vh !important;
-    left:10vw !important;
+    top: 35vh !important;
+    left: 10vw !important;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600 !important;
 }
-.info{
-    color:white;
+
+.info {
+    color: white;
     width: fit-content;
     position: absolute;
-    top:65vh !important;
-    right:10vw !important;
+    top: 65vh !important;
+    right: 10vw !important;
 }
-.servicios-inicio{
+
+.servicios-inicio {
     padding-top: 5vh !important;
     padding-bottom: 7vh !important;
 }
-.azul{
+
+.azul {
     background-color: #0b293d;
     padding: 1% !important;
     padding-bottom: 2rem !important;
 }
-.texto-blanco{
-    color:white;
+
+.texto-blanco {
+    color: white;
 }
-.footer-tuneado{
+
+.footer-tuneado {
     background-color: #dbdbdb;
     padding: 5% !important;
 }
-.navbar-nav{
+
+.navbar-nav {
     --bs-nav-link-color: #0f3d56 !important;
     --bs-nav-link-hover-color: #0b293d !important;
 }
-.btn-contacto{
+
+.btn-contacto {
     background-color: #af5e27;
     margin: 1.5rem !important;
     --bs-btn-hover-color: white;
     --bs-btn-hover-border-color: #a05929;
     --bs-btn-hover-bg: #a05929;
 }
-.btn-servicios{
-    margin:1rem !important;
+
+.btn-servicios {
+    margin: 1rem !important;
     --bs-btn-border-color: #0b293d !important;
-    --bs-btn-hover-border-color:#0b293d !important;
+    --bs-btn-hover-border-color: #0b293d !important;
 }
-.btn-servicios:hover, .card:hover{
+
+.btn-servicios:hover,
+.card:hover {
     box-shadow: 0 0 11px rgba(33, 33, 33, 0.158) !important;
 }
-.card{
+
+.card {
     transition: box-shadow .4s;
     margin-bottom: 2rem !important;
 }
-.card-header{
-    color:#0f3d56 !important;
+
+.card-header {
+    color: #0f3d56 !important;
     text-align: center !important;
 }
-.servicios-lista{
+
+.servicios-lista {
     max-width: 60% !important;
 }
-.icon-link>.bi, .bi-box{
+
+.icon-link>.bi,
+.bi-box {
     height: 2.5rem !important;
     width: 2rem !important;
 }
 
-.nav-ul{
+.nav-ul {
     font-size: 1.1rem !important;
 }
-.btn{
+
+.btn {
     padding: 1rem !important;
 }
-.banner-azul{
+
+.banner-azul {
     height: 40vh !important;
 }
-.banner-blanco{
-    background-color:white !important;
-    color:black !important;
+
+.banner-blanco {
+    background-color: white !important;
+    color: black !important;
     padding-top: 5vh !important;
 }
-.banner-inicio{
-    --bs-gutter-x: 0rem !important; 
-    position:relative !important; 
+
+.banner-inicio {
+    --bs-gutter-x: 0rem !important;
+    position: relative !important;
     display: inline-block !important;
 }
-.accordion{
+
+.accordion {
     margin-bottom: 2.5rem !important;
     width: 80% !important;
 }
+
 /*OSCURECE LA IMAGEN DEL BANNER DE INICIO*/
 .img-oscura {
     position: relative;
@@ -113,125 +137,156 @@
     left: 0;
     width: 100vw;
     height: 90vh;
-    background: rgba(0, 0, 0, 0.5); /* Puedes ajustar la opacidad cambiando el último valor */
-    pointer-events: none; /* Permite interactuar con la imagen subyacente */
+    background: rgba(0, 0, 0, 0.5);
+    /* Puedes ajustar la opacidad cambiando el último valor */
+    pointer-events: none;
+    /* Permite interactuar con la imagen subyacente */
 }
-.descripcion-servicio{
+
+.descripcion-servicio {
     margin-top: 2rem !important;
     margin-bottom: 2rem !important;
     padding-left: 8vh !important;
     padding-right: 8vh !important;
 }
-.imagen-servicio{
+
+.imagen-servicio {
     margin-top: 5vh !important;
     margin-left: 5vw !important;
     margin-right: 5vw !important;
-    width:90% !important;
+    width: 90% !important;
     height: 90% !important;
     object-fit: cover !important;
 }
+
 .embed-container {
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
 }
+
 .embed-container iframe {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
 
-.icon-link{
+.icon-link {
     gap: 0.8rem !important;
 
 }
 
-.li-footer{
+.li-footer {
     margin-right: 0% !important;
 }
-.carousel-item{
+
+.carousel-item {
     padding-left: 10vw !important;
     padding-right: 10vw !important;
     padding-bottom: 5vw !important;
-   /* margin: 5vh !important;   */
+    /* margin: 5vh !important;   */
 }
 
-.imagen-proyectos{
+.imagen-proyectos {
     width: 100%;
     height: 40vh;
     object-fit: cover;
 }
-h2{
-    margin:5vh !important;
+
+h2 {
+    margin: 5vh !important;
 }
-h3, .card h3{
+
+h3,
+.card h3 {
     font-size: 1.5rem;
     font-weight: 600;
 }
-h2, h3, h4 {
-    
+
+h2,
+h3,
+h4 {
+
     font-family: 'Montserrat', sans-serif;
     font-weight: 700 !important;
 }
 
-p{
+p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
-li,a{
+
+li,
+a {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     margin-right: 2% !important;
-    color:#0b293d;
+    color: #0b293d;
 }
 
 
 
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 950px) {
     .logo {
-      width: 92%;
+        width: 92%;
     }
-    .servicios-lista{
+
+    .servicios-lista {
         max-width: 100% !important;
     }
-    .texto-derecha{
+
+    .texto-derecha {
         width: 80vw;
         top: 25vh !important;
     }
-    .info{
+
+    .info {
         top: 72vh !important;
     }
-    .descripcion-servicio{
-       padding-left: 6vw !important;
-       padding-right: 6vw !important;
+
+    .descripcion-servicio {
+        padding-left: 6vw !important;
+        padding-right: 6vw !important;
     }
-    .nav-ul{
+
+    .nav-ul {
         font-size: 0.98rem !important;
     }
-    .texto-derecha, .info{
+
+    .texto-derecha,
+    .info {
         font-size: 1rem !important;
     }
+    .lang-icon{
+        width: 1.5rem !important;
+    }
 
-  }
+}
 
-  @media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
     .logo {
         width: 85%;
-      }
-  }
+    }
+}
 
-  @media only screen and (min-width: 950px) {
+@media only screen and (min-width: 951px) {
     .logo {
         width: 115% !important;
-      }
-      .nav-ul {
+    }
+
+    .nav-ul {
         font-size: 1.3rem !important;
     }
-    .texto-derecha, .info{
+
+    .texto-derecha,
+    .info {
         font-size: 1.5rem !important;
     }
-  }
+    .lang-icon{
+        width: 2rem !important;
+    }
+}
