Cambios en el navbar y agregué la seccion ctrl de calidad de suelos

--- a/static/styles.css
+++ b/static/styles.css
@@ -198,7 +198,9 @@
 .dropdown-menu{
     --bs-dropdown-min-width: 0% !important;
 }
-
+.card-desc{
+    padding:2rem !important;
+}
 h2 {
     margin: 5vh !important;
 }
