--- a/static/styles.css
+++ b/static/styles.css
@@ -205,6 +205,11 @@
     height: 40vh;
     object-fit: cover;
 }
+.imagen-EA {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+}
 
 .dropdown-menu {
     --bs-dropdown-min-width: 0% !important;
